OAuth setup first step

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.16.3",
     "mocha": "^5.1.0",
     "moment": "^2.22.1",
+    "oauth": "^0.9.15",
     "ts-lint": "^4.5.1",
     "ts-node": "^5.0.1",
     "typescript": "^2.7.2",
